# test-fullstack

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  start.sh
backend/migrations/: env.py
backend/migrations/versions/: 650113833f28_init.py  8a8583678daa_init.py
backend/src/: config.py  database.py
backend/src/api/: exceptions.py  main.py
backend/src/api/products/: dependencies.py  exceptions.py  models.py  routers.py  schemas.py
backend/src/api/users/: dependencies.py  exceptions.py  models.py  routers.py  schemas.py  validators.py
backend/src/bot/: filters.py  loader.py  main.py  states.py  templates.py
backend/src/bot/handlers/: callback_query.py  commands.py  product.py  user.py
backend/src/bot/makrups/: admin_menu.py  menu.py
backend/src/bot/services/: products.py  users.py
backend/src/repository/: base_repository.py  crud.py  products_repository.py  users_repository.py
backend/src/utils/: singleton.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: CreateProductModal.vue  Loader.vue  ProductCard.vue  ProductGrid.vue
frontend/src/constants/: api.js
frontend/src/stores/: products.js
